--- a/app/templates/components/people-list.hbs
+++ b/app/templates/components/people-list.hbs
@@ -1,16 +1,9 @@
-{{!-- <h2>{{@title}}</h2>
-
-<ul>
-  {{#each @people as |person|}}
-    <li>{{person}}</li>
-  {{/each}}
-</ul> --}}
-
 <h2>{{@title}}</h2>
 
 <ul>
   {{#each @people as |person|}}
-    <li><button {{action "showPerson" person}}>{{person}}</button></li>
+    <li>{{person}}</li>
+    {{!-- <li><button {{action "showPerson" person}}>{{person}}</button></li> --}}
   {{/each}}
 </ul>
 
